--- a/src/assets/i18n/cs.json
+++ b/src/assets/i18n/cs.json
@@ -157,6 +157,7 @@
       "expand-row": "rozbalit řádek",
       "row-actions": "akce",
       "select-page-of-posts": "Vyberte stránku příspěvků",
+      "show-actions": "Show actions",
       "warning-icon": "Ikona varování"
     },
     "clear": "Vymazat",
