--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -157,6 +157,7 @@
       "expand-row": "expand row",
       "row-actions": "row actions",
       "select-page-of-posts": "Select page of posts",
+      "show-actions": "Zobrazit akce",
       "warning-icon": "Warning icon"
     },
     "clear": "Clear",
